Fix logo visibility and get build to run

--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -31,8 +31,10 @@
         width: 100%;
       }
 
-      @include for-tablet-portrait-down {
-        display: none;
+      &.hideLogo {
+        @include for-tablet-portrait-down {
+          display: none;
+        }
       }
     }
 
